erDiagram
  DEPARTMENT ||--o{ SYS_USER : contains
  DEPARTMENT ||--o{ VISIT_APPLY : receives
  DEPARTMENT ||--o{ DEPARTMENT : parent_of

  SYS_USER ||--o{ SYS_USER_ROLE : owns
  SYS_ROLE ||--o{ SYS_USER_ROLE : assigned
  SYS_ROLE ||--o{ SYS_ROLE_PERMISSION : owns
  SYS_PERMISSION ||--o{ SYS_ROLE_PERMISSION : granted
  SYS_PERMISSION ||--o{ SYS_PERMISSION : parent_of

  VISITOR ||--o{ VISITOR_VEHICLE : owns
  VISITOR ||--o{ VISIT_APPLY : submits
  VISITOR ||--o{ BLACKLIST : may_be_listed
  VISITOR ||--o{ ACCESS_RECORD : enters_or_exits

  SYS_USER ||--o{ VISIT_APPLY : hosts
  VISIT_APPLY ||--o{ VISITOR_COMPANION : includes
  VISITOR_VEHICLE ||--o{ VISIT_APPLY : used_by
  VISIT_APPLY ||--o{ APPROVAL_RECORD : has
  SYS_USER ||--o{ APPROVAL_RECORD : approves
  VISIT_APPLY ||--|| PASS_CODE : generates
  PASS_CODE ||--o{ ACCESS_RECORD : verifies
  VISIT_APPLY ||--o{ ACCESS_RECORD : produces
  CAMPUS_GATE ||--o{ ACCESS_RECORD : records
  SYS_USER ||--o{ ACCESS_RECORD : handles

  SYS_USER ||--o{ NOTICE : receives
  SYS_USER ||--o{ OPERATION_LOG : creates
  DICT_TYPE ||--o{ DICT_ITEM : contains
  SYS_USER ||--o{ SCREENSHOT_RECORD : creates
  SYS_USER ||--o{ REPORT_RECORD : generates

  DEPARTMENT {
    bigint id PK
    bigint parent_id FK
    varchar dept_code UK
    varchar dept_name
    bigint leader_user_id FK
  }

  SYS_USER {
    bigint id PK
    varchar username UK
    varchar password_hash
    varchar real_name
    bigint department_id FK
    varchar user_type
  }

  SYS_ROLE {
    bigint id PK
    varchar role_code UK
    varchar role_name
  }

  SYS_PERMISSION {
    bigint id PK
    varchar permission_code UK
    varchar permission_name
    varchar route_path
    varchar api_path
  }

  VISITOR {
    bigint id PK
    varchar visitor_name
    varchar id_number UK
    varchar phone
    varchar visitor_level
  }

  VISIT_APPLY {
    bigint id PK
    varchar apply_no UK
    bigint visitor_id FK
    bigint host_user_id FK
    bigint department_id FK
    bigint vehicle_id FK
    varchar apply_status
    varchar access_status
  }

  APPROVAL_RECORD {
    bigint id PK
    bigint apply_id FK
    varchar approval_step
    bigint approver_user_id FK
    varchar approval_result
    datetime approval_time
  }

  PASS_CODE {
    bigint id PK
    bigint apply_id FK
    varchar pass_code UK
    datetime valid_from
    datetime valid_to
    varchar pass_status
  }

  ACCESS_RECORD {
    bigint id PK
    bigint apply_id FK
    bigint visitor_id FK
    bigint pass_code_id FK
    bigint entry_gate_id FK
    bigint exit_gate_id FK
    varchar access_status
  }